// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScriptInputModels 1`] = `
{
  "generated/models.ts": "// Code generated by wunderctl. DO NOT EDIT.

export interface CreatePetInput {
	petInput: PetInput;
}

export interface PetInput {
	id: string;
	name?: string;
}

export type JSONValue = string | number | boolean | JSONObject | Array<JSONValue>;

export type JSONObject = { [key: string]: JSONValue };

export interface GraphQLError {
	message: string;
	path?: ReadonlyArray<string | number>;
}
",
}
`;

exports[`TypeScriptResponseModels 1`] = `
{
  "generated/models.ts": "// Code generated by wunderctl. DO NOT EDIT.

export interface MyReviewsResponse {
	data: MyReviewsResponseData;
	errors?: ReadonlyArray<GraphQLError>;
}

export interface CreatePetResponse {
	data: CreatePetResponseData;
	errors?: ReadonlyArray<GraphQLError>;
}

export interface NewPetsResponse {
	data: NewPetsResponseData;
	errors?: ReadonlyArray<GraphQLError>;
}

export interface PetInput {
	id: string;
	name?: string;
}

export type JSONValue = string | number | boolean | JSONObject | Array<JSONValue>;

export type JSONObject = { [key: string]: JSONValue };

export interface GraphQLError {
	message: string;
	path?: ReadonlyArray<string | number>;
}

export interface MyReviewsResponseData {
	me?: {
		name?: string;
		reviews?: {
			id: string;
			body?: string;
		}[];
	};
}

export interface CreatePetResponseData {
	postPets?: {
		name?: string;
	};
}

export interface NewPetsResponseData {
	newPets?: {
		name?: string;
	};
}
",
}
`;
